tests/typec-test/test_out/simple-spec-inheritance.txt
error: 'param0' does not implement 'A'
  --> simple-spec-inheritance/root.ctl:23:30
   |
23 | fn [T: C] sum() -> uint => T\A\a() + T\B\a()
   |                              ^^^ here
   |

error: 'param0' does not implement 'B'
  --> simple-spec-inheritance/root.ctl:23:40
   |
23 | fn [T: C] sum() -> uint => T\A\a() + T\B\a()
   |                                        ^^^ here
   |

info: tir repr of functions:
fn [] main() -> uint return {
    uint - uint(uint - uint(sum[uint](), a()), a())
}

fn [] a() -> uint return 0

fn [] a() -> uint return 1



